application/example/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: caturday
  namespace: example
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: caturday
    weight: 100
